--- a/src/app/pages/contact-page/contact-page.component.html
+++ b/src/app/pages/contact-page/contact-page.component.html
@@ -6,3 +6,7 @@
 </app-contact-form>
 
 <pre>{{displayText}}</pre>
+
+<a *ngIf="displayText" (click)="editAddress()" href="#">
+    Edit Address
+</a>
